fixed overlapping content

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,7 +10,6 @@ h1 {
   position: relative;
   width: 85%;
   min-height: 100%;
-  max-height: 100%;
   margin: 0 auto;
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-size: 15px;
