--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -12,8 +12,7 @@ p {
   width: 100%;
   position: absolute;
   height: 90px;
-  bottom:15px;
-  clear: both;
+  bottom:0;
   border-top: 1px solid #b92b27;
   letter-spacing: 0.7px;
   text-align: center;
